[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/progress_bar/EmptyBar.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/godot-sprite.png" type="Texture" id=2]
[ext_resource path="res://src/dreamscape/CombatElements/CombatEntity.gd" type="Script" id=3]
[ext_resource path="res://src/dreamscape/CombatElements/ActiveEffects.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/shield.png" type="Texture" id=5]
[ext_resource path="res://src/dreamscape/CombatElements/Highlight2.gd" type="Script" id=6]
[ext_resource path="res://shaders/invert.shader" type="Shader" id=7]
[ext_resource path="res://assets/progress_bar/GreenBar.png" type="Texture" id=8]
[ext_resource path="res://themes/darktheme/StyleBox/InfoPanel.tres" type="StyleBox" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/is_active = true

[sub_resource type="GDScript" id=2]
script/source = "extends Area2D


func get_class() -> String:
	return(\"CombatEntity\")

func get_combat_entity() -> Node:
	return(get_parent().get_parent())
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="CombatEntity" type="VBoxContainer" groups=["CombatEntities"]]
margin_top = -30.4889
margin_right = 69.0
margin_bottom = 111.511
grow_vertical = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
defence_texture = ExtResource( 5 )

[node name="Push" type="Control" parent="."]
margin_right = 69.0
margin_bottom = 4.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 8.0
margin_right = 69.0
margin_bottom = 44.0
mouse_filter = 1

[node name="Incoming" type="GridContainer" parent="CenterContainer"]
margin_left = 34.0
margin_right = 34.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
columns = 3

[node name="Art" type="MarginContainer" parent="."]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 48.0
mouse_filter = 1

[node name="Texture" type="TextureRect" parent="Art"]
material = SubResource( 1 )
margin_right = 69.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlight" type="Control" parent="Art"]
margin_right = 69.0
mouse_filter = 1
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Art"]
collision_mask = 2
script = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Art/Area2D"]
shape = SubResource( 3 )

[node name="Name" type="Label" parent="."]
visible = false
margin_top = 44.0
margin_right = 69.0
margin_bottom = 58.0
text = "Gaslighter"
align = 1
autowrap = true

[node name="HealthBar" type="TextureProgress" parent="."]
margin_top = 52.0
margin_right = 69.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 8 )
size_flags_horizontal = 3
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 5
stretch_margin_right = 10
stretch_margin_bottom = 4

[node name="HBC" type="HBoxContainer" parent="."]
margin_top = 65.0
margin_right = 69.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defence" type="CenterContainer" parent="HBC"]
margin_right = 36.0
margin_bottom = 36.0
mouse_filter = 1

[node name="Icon" type="TextureRect" parent="HBC/Defence"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 2
expand = true
stretch_mode = 1

[node name="Amount" type="Label" parent="HBC/Defence"]
margin_left = 14.0
margin_top = 11.0
margin_right = 22.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HBC"]
margin_left = 40.0
margin_top = 11.0
margin_right = 69.0
margin_bottom = 25.0
mouse_filter = 1
text = "0/30"

[node name="ActiveEffects" parent="." instance=ExtResource( 4 )]
margin_top = 105.0
margin_right = 69.0
margin_bottom = 141.0
rect_min_size = Vector2( 0, 36 )
custom_constants/vseparation = 15
custom_constants/hseparation = 20

[node name="Description" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 2
custom_styles/panel = ExtResource( 9 )

[node name="Label" type="RichTextLabel" parent="Description"]
margin_left = 12.0
margin_top = 12.0
margin_right = 312.0
margin_bottom = 27.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[connection signal="mouse_entered" from="Art" to="." method="_on_Art_mouse_entered"]
[connection signal="mouse_exited" from="Art" to="." method="_on_Art_mouse_exited"]
[connection signal="mouse_entered" from="HealthBar" to="." method="_on_Health_mouse_entered"]
[connection signal="mouse_exited" from="HealthBar" to="." method="_on_Description_mouse_exited"]
[connection signal="mouse_entered" from="HBC/Defence" to="." method="_on_Defence_mouse_entered"]
[connection signal="mouse_exited" from="HBC/Defence" to="." method="_on_Description_mouse_exited"]
[connection signal="mouse_entered" from="HBC/Health" to="." method="_on_Health_mouse_entered"]
[connection signal="mouse_exited" from="HBC/Health" to="." method="_on_Description_mouse_exited"]
